Add gnd-id to Novalis

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1699,6 +1699,8 @@ Nomen:
     - start: 61
     - start: 63
 Novalis:
+  metadata:
+    gnd-id: 118588893
   references:
     GA 29/30:
     - start: 7
