Fix typo - thanks validator!
https://github.com/andredelft/heidegger-index/actions/runs/3234347679/jobs/5297340337

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1700,7 +1700,7 @@ Nomen:
     - start: 63
 Novalis:
   metadata:
-    gnd-id: 118588893
+    gnd_id: 118588893
   references:
     GA 29/30:
     - start: 7
