--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1124,6 +1124,11 @@ Kind:
   references:
     SvG:
     - start: 168
+Kreis:
+  references:
+    GA 29/30:
+    - end: 267
+      start: 266
 Kreutzer, Conradin:
   references:
     G:
@@ -1398,6 +1403,7 @@ Nichts:
     GA 29/30:
     - start: 368
     - start: 433
+    - start: 267
 Nietzsche, Friedrich:
   references:
     EM:
@@ -1464,10 +1470,10 @@ Otto Hahn:
   type: p
 Pascal, Blaise:
   references:
-    Sch:
-    - start: 54
     SZ:
     - start: 4
+    Sch:
+    - start: 54
   type: p
 Pessimismus:
   references:
@@ -1509,6 +1515,8 @@ Philosophie:
     - start: 47
     - start: 48
     - start: 50
+    - end: 267
+      start: 266
 Philosophieren:
   references:
     EM:
@@ -2230,6 +2238,11 @@ Weltzeit:
     WD:
     - start: 269
     - start: 280
+Wesen des Lebens:
+  references:
+    GA 29/30:
+    - end: 267
+      start: 265
 Wesen des Menschen:
   references:
     EWI:
@@ -2300,6 +2313,11 @@ Zeitlichkeit des Daseins:
   references:
     GA 29/30:
     - start: 253
+Zugänglichkeit des Lebendiges:
+  references:
+    GA 29/30:
+    - end: 266
+      start: 265
 Zugänglichkeit des Seienden:
   references:
     GA 29/30:
