Add text to description of Hebel’s Theologische Schriften 3, 3

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1959,7 +1959,7 @@ Technologie:
   references:
     SvG:
     - start: 179
-'Theologische Schriften 3: Gebet 3':
+Theologische Schriften 3, Gebet 3:
   author: Hebel, Johann Peter
   references:
     G:
