--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -2417,6 +2417,11 @@ Zeitlichkeit des Daseins:
   references:
     GA 29/30:
     - start: 253
+Zoologie:
+  references:
+    GA 29/30:
+    - end: 277
+      start: 274
 Zugänglichkeit des Lebendiges:
   references:
     GA 29/30:
