--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1138,7 +1138,7 @@ Kant, Immanuel:
     - start: 272
     - start: 287
   type: p
-Karl Reinhardt:
+Reinhardt, Karl:
   references:
     EM:
     - start: 115
