--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,19 @@ on:
     branches: [ main ]
 
 jobs:
+  validate-index:
+    runs-on: ubuntu-latest
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    - name: Validate YAML
+      uses: cardinalby/schema-validator-action@v1
+      with:
+        file: 'index/heidegger-index.yml'
+        schema: 'validation/schema.yml'
   deploy:
     runs-on: ubuntu-latest
+    needs: validate-index
     steps:
     - name: Install SSH Key
       uses: shimataro/ssh-key-action@v2
