Update validation.yml to not validate main
Validation happens in the deploy workflow.

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -2,9 +2,7 @@ name: Validation
 
 on:
   push:
-    branches: [ main, 'feature/**' ]
-  pull_request:
-    branches: [ main ]
+    branches-ignore: [ main ]
 
   workflow_dispatch:
 
