Rewrite JGB reference to comply with eKGWB

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1200,7 +1200,7 @@ Information:
   references:
     SvG:
     - start: 182
-JGB Aus hohen Bergen 5.243:
+JGB Nachgesang:
   author: Nietzsche, Friedrich
   references:
     GA 29/30:
