Some terms from GA 29/30 §18c

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -26,6 +26,11 @@ Anaximander:
     SvG:
     - start: 158
   type: p
+Angriff:
+  references:
+    GA 29/30:
+    - start: 112
+    - start: 31
 Anspruch:
   references:
     GA 29/30:
@@ -45,6 +50,7 @@ Anthropologie:
     GA 29/30:
     - start: 406
     - start: 408
+    - start: 115
 Antigonä:
   references:
     SvG:
@@ -212,6 +218,12 @@ Baer, Karl Ernst von:
     GA 29/30:
     - start: 378
   type: p
+Bedeutung:
+  references:
+    GA 29/30:
+    - start: 115
+  related:
+  - wesentliche Möglichkeit des Seins
 Bedrängnis im Ganzen:
   references:
     GA 29/30:
@@ -326,6 +338,12 @@ Christus:
   references:
     WD:
     - start: 269
+Da-sein:
+  parent: Dasein
+  references:
+    GA 29/30:
+    - start: 113
+    - start: 31
 Dabeibleiben:
   references:
     GA 29/30:
@@ -593,6 +611,8 @@ Ergriffenheit:
       start: 12
     - end: 10
       start: 9
+  related:
+  - ergreifen
 Ernst:
   references:
     GA 29/30:
@@ -635,10 +655,6 @@ Frage nach dem Sinn von Sein:
     SZ:
     - end: 8
       start: 1
-Fragen:
-  references:
-    GA 29/30:
-    - start: 13
 Fragment 1 (Heraklit):
   author: Heraklit
   metadata:
@@ -761,14 +777,11 @@ Fähigkeit:
   references:
     GA 29/30:
     - start: 489
-Ganze des Seiende:
-  references:
-    GA 29/30:
-    - start: 44
 Ganze des Seienden:
   references:
     GA 29/30:
     - start: 13
+    - start: 44
     WD:
     - start: 283
   related:
@@ -835,6 +848,12 @@ Gelassenheit zu den Dingen:
     G:
     - end: 529
       start: 527
+Gerede:
+  references:
+    GA 29/30:
+    - start: 116
+      type: r
+    - start: 31
 Gesang:
   references:
     WD:
@@ -916,6 +935,7 @@ Gleichgültigkeit:
     GA 29/30:
     - start: 367
       type: r
+    - start: 115
 Goethe, Johann Wolfgang von:
   references:
     SvG:
@@ -1279,6 +1299,11 @@ Kritik der Reinen Vernunft:
     WBPh:
     - start: 272
   type: w
+Kulturphilosophie:
+  references:
+    GA 29/30:
+    - end: 116
+      start: 111
 Langeweile:
   references:
     EWI:
@@ -1555,6 +1580,11 @@ Naturwissenschaft:
     - start: 180
     WD:
     - start: 278
+Neugier:
+  references:
+    GA 29/30:
+    - start: 116
+      type: r
 Neuzeit:
   references:
     G:
@@ -1728,6 +1758,7 @@ Philosophieren:
     - start: 415
     - end: 7
       start: 6
+    - start: 114
 Physica:
   author: Aristoteles
   metadata:
@@ -2214,6 +2245,8 @@ Technik:
     - start: 526
       type: r
     - start: 527
+    GA 29/30:
+    - start: 115
     Sch:
     - start: 55
     SvG:
@@ -2631,6 +2664,12 @@ Zuspruch:
     - start: 183
     - start: 187
     - start: 188
+Zweideutigkeit des Philosophierens:
+  parent: Philosophieren
+  references:
+    GA 29/30:
+    - start: 114
+    - start: 31
 Zwiesel:
   references:
     SvG:
@@ -2723,6 +2762,11 @@ dürftiger Zeit:
   related:
   - Brod und Wein
   - Dichter
+ergreifen:
+  references:
+    GA 29/30:
+    - end: 113
+      start: 112
 ex-sistent:
   references:
     WBPh:
@@ -2733,6 +2777,10 @@ formale Anzeige:
     - end: 431
       start: 421
     - start: 441
+fragen:
+  references:
+    GA 29/30:
+    - start: 13
 ganz Andere:
   references:
     GA 29/30:
@@ -2930,6 +2978,10 @@ weil:
   references:
     SvG:
     - start: 169
+wesentliche Möglichkeit des Seins:
+  references:
+    GA 29/30:
+    - start: 115
 Ödipus:
   references:
     SvG:
